Refactor: refactored reservation flow using Template Method pattern f… (#113)
* Refactor: refactored reservation flow using Template Method pattern for vehicle and parking reservation

* Small fix: fix test in ParkingReservationServiceTest

* refactor: split reservations into base + subtype tables and remove final for Spring AOP proxying

* fix: Vehicle reservation flow

* small fix: change access modifier for VehicleReservationSource

* small fix: fix testCreateReservation

* small fix: fix Parking reservation flow and test

* Fixed merge conflicts & changed res and parking res tables

---------

Co-authored-by: Greg Sacciadis <greg.sacciadis@gmail.com>